artifacthub/library/general/block-loadbalancer-services/1.0.0/samples/block-load-balancer/example_allowed.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-allowed
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
